k8s/renders/kata-configs.yaml
# Source: enclaveid/charts/guacamole/templates/deployment-guacamole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enclaveid-dev-guacamole-guacamole
  labels:
    app.kubernetes.io/name: guacamole
    helm.sh/chart: guacamole-1.4.1
    app.kubernetes.io/instance: enclaveid-dev
    app.kubernetes.io/version: "1.5.5"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: guacamole-guacamole
      app.kubernetes.io/instance: enclaveid-dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guacamole-guacamole
        app.kubernetes.io/instance: enclaveid-dev
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      serviceAccountName: enclaveid-dev-guacamole
      securityContext: {}
      containers:
        - name: guacamole
          securityContext: {}
          image: "guacamole/guacamole:1.5.5"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources: {}
      volumes:
        - name: initdb
          emptyDir: {}
---
# Source: enclaveid/charts/guacamole/templates/deployment-guacd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enclaveid-dev-guacamole-guacd
  labels:
    app.kubernetes.io/name: guacamole
    helm.sh/chart: guacamole-1.4.1
    app.kubernetes.io/instance: enclaveid-dev
    app.kubernetes.io/version: "1.5.5"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: guacamole-guacd
      app.kubernetes.io/instance: enclaveid-dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guacamole-guacd
        app.kubernetes.io/instance: enclaveid-dev
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      serviceAccountName: enclaveid-dev-guacamole
      securityContext: {}
      containers:
        - name: guacamole
          securityContext: {}
          image: "guacamole/guacd:1.5.5"
          imagePullPolicy: IfNotPresent
          ports:
            - name: guacd
              containerPort: 4822
              protocol: TCP
          resources: {}
---
# Source: enclaveid/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enclaveid-dev
  labels:
    helm.sh/chart: enclaveid-0.0.0
    app.kubernetes.io/name: enclaveid
    app.kubernetes.io/instance: enclaveid-dev
    app.kubernetes.io/version: "dev-0.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: enclaveid
      app.kubernetes.io/instance: enclaveid-dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: enclaveid
        app.kubernetes.io/instance: enclaveid-dev
    spec:
      volumes:
        - name: unencrypted-shared-storage
          persistentVolumeClaim:
            claimName: enclaveid-dev-shared-pvc
        - name: api-tmpfs
          emptyDir:
            medium: Memory
      serviceAccountName: enclaveid-dev
      securityContext: {}
      containers:
        - name: enclaveid
          securityContext: {}
          image: "localhost:32000/api@sha256:b5c881284a257779785d35cee91889acf736fab904a2fb4ec11742943b62e418"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - mountPath: /tmp
              name: api-tmpfs
            - mountPath: /mnt/unencrypted-shared-storage
              name: unencrypted-shared-storage
          resources: {}
          # Add sidecars
---
# Source: enclaveid/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: enclaveid-dev-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: enclaveid-dev
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.2.0
    helm.sh/chart: postgresql-15.0.0
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  serviceName: enclaveid-dev-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: enclaveid-dev
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: enclaveid-dev-postgresql
      labels:
        app.kubernetes.io/instance: enclaveid-dev
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/version: 16.2.0
        helm.sh/chart: postgresql-15.0.0
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: enclaveid-dev-postgresql
      automountServiceAccountToken: false
      affinity:
        podAffinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: enclaveid-dev
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql:16.2.0-debian-12-r8
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "enclaveid" -d "dbname=enclaveid" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "enclaveid" -d "dbname=enclaveid" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/logs
              subPath: app-logs-dir
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: enclaveid/charts/guacamole/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "enclaveid-dev-guacamole-test-connection"
  labels:
    app.kubernetes.io/name: guacamole
    helm.sh/chart: guacamole-1.4.1
    app.kubernetes.io/instance: enclaveid-dev
    app.kubernetes.io/version: "1.5.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['enclaveid-dev-guacamole:80']
  restartPolicy: Never
---
# Source: enclaveid/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "enclaveid-dev-test-connection"
  labels:
    helm.sh/chart: enclaveid-0.0.0
    app.kubernetes.io/name: enclaveid
    app.kubernetes.io/instance: enclaveid-dev
    app.kubernetes.io/version: "dev-0.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['enclaveid-dev:80']
  restartPolicy: Never
